--- a/Llama_PDF.ipynb
+++ b/Llama_PDF.ipynb
@@ -2610,7 +2610,7 @@
         "documents = loader.load_data(file=Path('./PDFs/HR_Policy.pdf'))\n",
         "\n",
         "# init pinecone\n",
-        "pinecone.init(api_key=\"c7896285-b639-4197-acd4-bc3d45e90126\", environment=\"gcp-starter\")\n",
+        "pinecone.init(api_key=\"6\", environment=\"gcp-starter\")\n",
         "pinecone.create_index(\"quickstart\", dimension=384, metric=\"euclidean\", pod_type=\"p1\")\n",
         "\n",
         "# construct vector store and customize storage context\n",
